# Gait

./: .gitignore  CMakeLists.txt  Walking.cpp  Walking.h  mistake  note  walking.cpp
include/: Kinematics.h  MX28.h  MotionManager.h  const.h  defines.h  matrix.h  minIni.h  point.h  vector.h  walking.h
src/: MX28.cpp  MotionManager.cpp  Walking.cpp  matrix.cpp  point.cpp  vector.cpp  walking.cpp
